--- a/Test_Doc.ipynb
+++ b/Test_Doc.ipynb
@@ -1,23 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "377b4bcd",
+   "cell_type": "markdown",
+   "id": "2d44d077",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is our test file\n"
-     ]
-    }
-   ],
    "source": [
-    "print('testing merge conflicts')\n",
-    "\n",
-    "print(\"4:45pm 30th Nov\")"
+    "bfirebfyiwbg8"
    ]
   }
  ],
