--- a/Test_Doc.ipynb
+++ b/Test_Doc.ipynb
@@ -12,7 +12,8 @@
      "text": [
       "this is our test file\n",
       "4:45pm 30th Nov\n",
-      "5:06pm, last entry to try merge\n"
+      "5:06pm, last entry to try merge\n",
+      "10:06pm, attempt to fix MAIN via SEAN\n"
      ]
     }
    ],
@@ -21,7 +22,9 @@
     "\n",
     "print(\"4:45pm 30th Nov\")\n",
     "\n",
-    "print(\"5:06pm, last entry to try merge\")"
+    "print(\"5:06pm, last entry to try merge\")\n",
+    "\n",
+    "print(\"10:06pm, attempt to fix MAIN via SEAN\")"
    ]
   },
   {
