10:15pm, Conflict Attempt w/ SEAN & MAIN branch when merging

--- a/Test_Doc.ipynb
+++ b/Test_Doc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "377b4bcd",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
     "\n",
     "print(\"5:06pm, last entry to try merge\")\n",
     "\n",
-    "print(\"10:06pm, attempt to fix MAIN via SEAN\")"
+    "print(\"10:15pm, Conflict Attempt w/ SEAN & MAIN branch when merging\")"
    ]
   },
   {
